--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Mohammad Reza</title>
-    <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon_io/favicon-16x16.png">
 </head>
 <body>
 <div class="w-1440">
