[update]:[text]: index.html [dell]:[directory]: favicon

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="social_media">
                 <ul>
                     <li>
-                        <a href="#">
+                        <a href="#" target="_blank">
                             <svg width="48" height="48" viewBox="0 0 48 48" fill="none"
                                  xmlns="http://www.w3.org/2000/svg">
                                 <path d="M24 48C37.25 48 48 37.25 48 24C48 10.75 37.25 0 24 0C10.75 0 0 10.75 0 24C0 37.25 10.75 48 24 48Z"
@@ -33,7 +33,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#" target="_blank">
                             <svg width="48" height="48" viewBox="0 0 48 48" fill="none"
                                  xmlns="http://www.w3.org/2000/svg">
                                 <path d="M24 48C37.25 48 48 37.25 48 24C48 10.75 37.25 0 24 0C10.75 0 0 10.75 0 24C0 37.25 10.75 48 24 48Z"
@@ -44,7 +44,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#" target="_blank">
                             <svg width="48" height="48" viewBox="0 0 48 48" fill="none"
                                  xmlns="http://www.w3.org/2000/svg">
                                 <path d="M24 48C37.25 48 48 37.25 48 24C48 10.75 37.25 0 24 0C10.75 0 0 10.75 0 24C0 37.25 10.75 48 24 48Z"
@@ -56,7 +56,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#" target="_blank">
                             <svg width="48" height="48" viewBox="0 0 48 48" fill="none"
                                  xmlns="http://www.w3.org/2000/svg">
                                 <path d="M24 48C37.25 48 48 37.25 48 24C48 10.75 37.25 0 24 0C10.75 0 0 10.75 0 24C0 37.25 10.75 48 24 48Z"
