[update]:[text]: index.html

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <img src="img/Transparent-zoomed.png" alt="Transparent-zoomed">
     </section>
     <h1 class="why_hire_me">Why Hire Me?</h1>
-    <div class="card">
+    <section class="card">
         <div class="icon">
             <div class="ellipse">
                 <svg xmlns="http://www.w3.org/2000/svg" width="51" height="52" viewBox="0 0 51 52" fill="none">
@@ -327,7 +327,7 @@
             <h3>Client’s Favourite</h3>
             <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
         </div>
-    </div>
+    </section>
     <section class="portfolio">
         <h1>Portfolio</h1>
         <div class="portfolio-img">
